RESOLVED FIXED208043
[macOS] Large form controls are rendered at the wrong NSControlSize
https://bugs.webkit.org/show_bug.cgi?id=208043
Summary [macOS] Large form controls are rendered at the wrong NSControlSize
Wenson Hsieh
Reported 2020-02-20 22:38:42 PST
AX support — make sure that we set the right -controlSize on native controls when painting.
Attachments
Patch (26.52 KB, patch)
2020-02-21 09:10 PST, Wenson Hsieh
no flags
Radar WebKit Bug Importer
Comment 1 2020-02-20 22:40:00 PST
Wenson Hsieh
Comment 2 2020-02-21 09:10:37 PST
WebKit Commit Bot
Comment 3 2020-02-21 11:03:34 PST
Comment on attachment 391407 [details] Patch Clearing flags on attachment: 391407 Committed r257150: <https://trac.webkit.org/changeset/257150>
WebKit Commit Bot
Comment 4 2020-02-21 11:03:36 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.