[macOS] Large form controls are rendered at the wrong NSControlSize https://bugs.webkit.org/show_bug.cgi?id=208043 <rdar://problem/59659134>

Reviewed by Tim Horton.

Source/WebCore:

When painting form controls that are larger than a certain threshold (for the most part, 21px), use
NSControlSizeLarge instead of NSControlSizeRegular. This makes us choose a more appropriate appearance when
painting native large form controls, as long as the system supports it. Note that not all the metrics for
NSControlSizeLarge form controls are finalized, as noted in the per-method comments below.

With this patch alone, there is no change in behavior yet; in the near future, these changes will be covered by
new platform-specific baselines.

* platform/PopupMenuStyle.h: Add a new PopupMenuSizeLarge that corresponds to a popup that has NSControlSizeLarge.
* platform/mac/ThemeMac.h: Add a helper to check (at runtime) whether the new large form control size is enabled.
* platform/mac/ThemeMac.mm:
(WebCore::controlSizeForFont): Add a new font size breakpoint, for which we use NSControlSizeLarge instead of
NSControlSizeRegular.

(WebCore::sizeFromNSControlSize):
(WebCore::sizeFromFont):
(WebCore::controlSizeFromPixelSize):
(WebCore::setControlSize):
(WebCore::checkboxSizes): Reflect the fact that checkboxes with NSControlSizeLarge are 16 by 16.
(WebCore::checkboxMargins): Just match NSControlSizeRegular margins for now. These seem incorrect already, even
for NSControlSizeRegular in macOS 10.15.

(WebCore::radioSizes): Reflect the fact that radio buttons with NSControlSizeLarge are 16 by 16, and
NSControlSizeRegular radio buttons are 14 by 14.

(WebCore::radioMargins): Just match NSControlSizeRegular margins for now. These seem incorrect already, even for
NSControlSizeRegular in macOS 10.15.

(WebCore::buttonSizes): Reflect the fact that buttons with NSControlSizeLarge are 28px tall.
(WebCore::buttonMargins): Just match NSControlSizeRegular margins for now, and add a FIXME about updating them.
(WebCore::setUpButtonCell):
(WebCore::stepperSizes): NSControlSizeLarge matches NSControlSizeRegular at the moment.
(WebCore::stepperControlSizeForFont): Add a new font size breakpoint for using NSControlSizeLarge.
* rendering/RenderThemeMac.mm:
(WebCore::RenderThemeMac::controlSizeForFont const):
(WebCore::RenderThemeMac::controlSizeForCell const):
(WebCore::RenderThemeMac::controlSizeForSystemFont const):
(WebCore::RenderThemeMac::popupButtonMargins const):
(WebCore::RenderThemeMac::popupButtonSizes const):
(WebCore::RenderThemeMac::popupButtonPadding const):

NSControlSizeLarge metrics for popup buttons cannot be determined yet.

(WebCore::RenderThemeMac::progressBarSizes const):
(WebCore::RenderThemeMac::progressBarMargins const):
(WebCore::RenderThemeMac::paintProgressBar):

NSControlSizeLarge matches NSControlSizeRegular at the moment.

(WebCore::menuListButtonSizes):
(WebCore::RenderThemeMac::popupMenuSize const):
(WebCore::RenderThemeMac::menuListSizes const):
(WebCore::RenderThemeMac::searchFieldSizes const):
(WebCore::RenderThemeMac::cancelButtonSizes const):
(WebCore::RenderThemeMac::resultsButtonSizes const):

Search field results and cancel buttons have the same size in NSControlSizeLarge as in NSControlSizeRegular.

Source/WebCore/PAL:

Import NSAppearance_Private.h in this SPI header. See WebCore ChangeLog for more details.

* pal/spi/mac/NSAppearanceSPI.h:

Source/WebKit:

See WebCore ChangeLog for more details.

* UIProcess/mac/WebPopupMenuProxyMac.mm:
(WebKit::WebPopupMenuProxyMac::showPopupMenu):

Source/WebKitLegacy/mac:

See WebCore ChangeLog for more details.

* WebCoreSupport/PopupMenuMac.mm:
(PopupMenuMac::show):


Canonical link: https://commits.webkit.org/221037@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@257150 268f45cc-cd09-0410-ab3c-d52691b4dbfc